# tsr-test

./: Devel.hs  Main.hs  Paths_tsuru.hs  Quote.hs  README  Read0.hs  Read1.hs  Read2.hs  Read3.hs  Test.hs  qsort.hs  tsuru.cabal
Quote/: Data.hs  Parser.hs
