Name:                tsuru
Version:             0.1
Synopsis:            parse kopsi200 market data feed.
Description:         parse kopsi200 market data feed.
Homepage:            http://github.com/cutsea110/tsuru
License:             BSD3
License-file:        LICENSE
Author:              Katsutoshi Itoh
Maintainer:          cutsea110@gmail.com
Category:            Network
Build-type:          Simple
Cabal-version:       >=1.2
Executable tsuru
  Main-Is:           Main.hs
  Build-depends:
         attoparsec >= 0.9.1 && < 1.0
       , base >= 4.0 && < 5.0
       , bytestring >= 0.9.1 && < 0.9.2
       , containers >= 0.4 && < 0.5
       , enumerator >= 0.4 && < 0.5
       , mtl >= 2.0 && < 3.0
       , pcap >= 0.4.5 && < 0.4.6
       , pcap-enumerator >= 0.2
       , time >= 1.2 && < 1.3
       , ListLike >= 3.1 && < 3.2
--       , vector >= 0.9 && < 1.0
